--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://allfont.ru/allfont.css?fonts=franklin-gothic-book" rel="stylesheet" type="text/css" />
     <link href="//db.onlinewebfonts.com/c/c379b03bb3feeb76b9e05ed70791b22f?family=Franklin+Gothic+Medium+Cond" rel="stylesheet" type="text/css"/>
     <title>NAZVA Ukraine brand</title>
   </head>
